--- a/Application/Home/View/Panel/article_sort.html
+++ b/Application/Home/View/Panel/article_sort.html
@@ -16,6 +16,7 @@
 	<li><a href="#advance_setting">展示设置</a>
 	</li>
 </ul> -->
+
 		<ul class="setting">
 			<li>
 				<div>
@@ -36,13 +37,17 @@
 								<li><span></span><span class="content">分类</span><span class="select_span">栏目</span></li>
 							<volist name="type_list" id="vo">
 								<li>
-								<span><input class="type_checkbox" id="sort_{$vo.id}" type="checkbox" name="type[]" value="{$vo.id}">
-								</span><span class="content"><label for="sort_{$vo.id}">{$vo.name}</label>
-								</span><span class="select_span"><select name="vo2.id">
-									<volist name="column_list" id="vo2">						
-										<option value="{$vo2.id}" data="{$vo2.url}">{$vo2.name}</option>
-									</volist>
-								</select></span></li>
+									<span><input class="type_checkbox" id="sort_{$vo.id}" type="checkbox" name="type" value="{$vo.id}">
+									</span><span class="content"><label for="sort_{$vo.id}">{$vo.name}</label>
+									</span>
+									<span class="select_span">
+										<select name="id">
+											<volist name="column_list" id="vo2">						
+												<option value="{$vo2.id}" data="{$vo2.url}">{$vo2.name}</option>
+											</volist>
+										</select>
+									</span>
+								</li>
 							</volist>
 							</ul>
 						</form>
