--- a/Application/Home/View/Widget/ArticleSort/first_theme.html
+++ b/Application/Home/View/Widget/ArticleSort/first_theme.html
@@ -1,10 +1,9 @@
-{$option|dump}
 <div class='article_container controller' data-id="{$cname}">
 	<div class='controller-title'>{$option['title']}</div>
-	<div class='article_sort'>"
+	<div class='article_sort'>
 		<ul class = 'article_sort_list'>
 			<ul class = 'article_sort_list' data='"+column_id+"'>
-		html += temp;
+			{$option['list']}
 		</ul>
 	</div>
 </div>
